HDX-6559 some fixes to footer (white space below) + animation

--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/header-responsive.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/header-responsive.less
@@ -9,6 +9,12 @@ nav.new-header.mobile-only .navbar-collapse .nav {
 
 }
 
+body {
+  .hdx-footer {
+    margin-top: 20px;
+  }
+}
+
 @media (max-width: @cut-point-mobile-s) {
   body{
     .hdx-footer {
